--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,9 +1,33 @@
 # Node.js dependencies
 node_modules/
-.env
 package-lock.json
+
+# Environment variables
+.env
 
 # Logs
 logs/
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Prisma
+# prisma/dev.db
+# prisma/migrations/
+
+# TypeScript
+dist/
+build/
+*.tsbuildinfo
+
+# VS Code
+.vscode/
+
+# Docker
+*.local
+docker-compose.override.yml
+
+# OS
+.DS_Store
+Thumbs.db
