--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,25 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.5.0",
+        "bcryptjs": "^3.0.2",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0",
         "prisma": "^6.5.0"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.14",
         "@types/node": "^22.13.10",
+        "@types/passport": "^1.0.17",
+        "@types/passport-jwt": "^4.0.1",
+        "@types/passport-local": "^1.0.38",
         "nodemon": "^3.1.9",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.8.2"
