--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.5.0",
+        "amqplib": "^0.10.8",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
+        "csv-parse": "^5.6.0",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "passport": "^0.7.0",
@@ -24,9 +26,11 @@
         "prisma": "^6.5.0"
     },
     "devDependencies": {
+        "@types/amqplib": "^0.10.7",
         "@types/bcryptjs": "^2.4.6",
         "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
+        "@types/csv-parse": "^1.1.12",
         "@types/express": "^4.17.14",
         "@types/node": "^22.13.10",
         "@types/passport": "^1.0.17",
