refactor(api): move business logic to services and repositories

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
 
     rabbitmq:
         image: rabbitmq:3-management
+        healthcheck:
+            test: ['CMD', 'rabbitmqctl', 'status']
+            interval: 10s
+            timeout: 5s
+            retries: 6
         ports:
             - '5672:5672'
             - '15672:15672'
@@ -38,8 +43,10 @@ services:
             DB_NAME: mydatabase
             RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672
         depends_on:
-            - db
-            - rabbitmq
+            db:
+                condition: service_started
+            rabbitmq:
+                condition: service_healthy
 
 volumes:
     pgdata:
