--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
-        "prisma": "^6.5.0"
+        "prisma": "^6.5.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
         "@types/amqplib": "^0.10.7",
@@ -36,6 +38,8 @@
         "@types/passport": "^1.0.17",
         "@types/passport-jwt": "^4.0.1",
         "@types/passport-local": "^1.0.38",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.8",
         "nodemon": "^3.1.9",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.8.2"
