--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,40 @@
 version: '3.8'
 
 services:
+    frontend:
+        build:
+            context: ./frontend
+            dockerfile: Dockerfile
+        ports:
+            - '5173:5173'
+        volumes:
+            - ./frontend:/app
+            - /app/node_modules
+        depends_on:
+            - backend
+
+    backend:
+        build:
+            context: ./backend
+            dockerfile: Dockerfile
+        volumes:
+            - ./backend:/app
+            - /app/node_modules
+        ports:
+            - '8080:8080'
+        environment:
+            DB_HOST: db
+            DB_PORT: 5432
+            DB_USER: myuser
+            DB_PASSWORD: mypassword
+            DB_NAME: mydatabase
+            RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672
+        depends_on:
+            db:
+                condition: service_started
+            rabbitmq:
+                condition: service_healthy
+
     db:
         image: postgres:14
         environment:
@@ -25,28 +59,6 @@ services:
         environment:
             RABBITMQ_DEFAULT_USER: guest
             RABBITMQ_DEFAULT_PASS: guest
-
-    backend:
-        build:
-            context: ./backend
-            dockerfile: Dockerfile
-        volumes:
-            - ./backend:/app
-            - /app/node_modules
-        ports:
-            - '8080:8080'
-        environment:
-            DB_HOST: db
-            DB_PORT: 5432
-            DB_USER: myuser
-            DB_PASSWORD: mypassword
-            DB_NAME: mydatabase
-            RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672
-        depends_on:
-            db:
-                condition: service_started
-            rabbitmq:
-                condition: service_healthy
 
 volumes:
     pgdata:
